--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.6) # for CMakePushCheckState
 project(libcloudph++ CXX C)
 
-# requireing C++11 (TODO: not for CUDA!)
+# requireing C++11 
 set(CMAKE_CXX_FLAGS "-std=c++11")
 
 add_subdirectory(libcloudph++) 
