--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_subdirectory(parcel)
 add_subdirectory(theta)
 add_subdirectory(particles)
+
+# TODO: target_compile_options() // added to CMake on Jun 3rd 2013
