more CMake installation rules

--- a/libcloudph++/common/CMakeLists.txt
+++ b/libcloudph++/common/CMakeLists.txt
@@ -1,1 +1,15 @@
 add_subdirectory(prtcls)
+
+install(
+  FILES 
+    const_cp.hpp
+    hydrostatic.hpp
+    macros.hpp
+    moist_air.hpp
+    theta_dry.hpp
+    theta_std.hpp
+    units.hpp
+    zip.hpp
+  DESTINATION 
+    include/libcloudph++/common
+)
