--- a/libcloudph++/common/prtcls/CMakeLists.txt
+++ b/libcloudph++/common/prtcls/CMakeLists.txt
@@ -17,6 +17,7 @@ if (CUDA_FOUND)
   set(files "${files};particles_cuda.cu")
   add_definitions(-DCUDA_FOUND)
   cuda_add_library(cloudphxx_common_prtcls SHARED ${files})
+  target_link_libraries(cloudphxx_common_prtcls ${CUDA_curand_LIBRARY})
 else()
   add_library(cloudphxx_common_prtcls SHARED ${files})
 endif()
