apparently finished rng stuff

--- a/libcloudph++/common/prtcls/CMakeLists.txt
+++ b/libcloudph++/common/prtcls/CMakeLists.txt
@@ -7,11 +7,6 @@ set(CUDA_PROPAGATE_HOST_FLAGS OFF) # -std=c++11 will not work
 # trying to allow runtime choice betwee CUDA, CPP and OpenMP backends
 set(files "")
 set(files "${files};particles.cpp")
-set(files "${files};particles_cpp.cpp")
-
-if (OPENMP_FOUND)
-  set(files "${files};particles_omp.cpp")
-endif()
 
 if (CUDA_FOUND)
   set(files "${files};particles_cuda.cu")
@@ -19,6 +14,11 @@ if (CUDA_FOUND)
   cuda_add_library(cloudphxx_common_prtcls SHARED ${files})
   target_link_libraries(cloudphxx_common_prtcls ${CUDA_curand_LIBRARY})
 else()
+  if (OPENMP_FOUND)
+    set(files "${files};particles_omp.cpp")
+  else()
+    set(files "${files};particles_cpp.cpp")
+  endif()
   add_library(cloudphxx_common_prtcls SHARED ${files})
 endif()
 
