super-droplet initialisation: almost done...

--- a/include/common/CMakeLists.txt
+++ b/include/common/CMakeLists.txt
@@ -8,6 +8,8 @@ install(
     theta_std.hpp
     units.hpp
     zip.hpp
+    lognormal.hpp
+    unary_function.hpp
   DESTINATION 
     include/libcloudph++/common
 )
