--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,18 +7,24 @@ set(CUDA_PROPAGATE_HOST_FLAGS OFF) # -std=c++11 will not work
 # trying to allow runtime choice betwee CUDA, CPP and OpenMP backends
 set(files "")
 set(files "${files};particles.cpp")
-set(files "${files};particles_cpp.cpp")
-if (OPENMP_FOUND)
-  set(files "${files};particles_omp.cpp")
-endif()
+
+# TODO: should be here... but segfaults :(
+#set(files "${files};particles_cpp.cpp")
+#if (OPENMP_FOUND)
+#  set(files "${files};particles_omp.cpp")
+#endif()
 
 if (CUDA_FOUND)
   set(files "${files};particles_cuda.cu")
   add_definitions(-DCUDA_FOUND)
-  cuda_add_library(cloudphxx_common_prtcls SHARED ${files})
-  target_link_libraries(cloudphxx_common_prtcls ${CUDA_curand_LIBRARY})
+  cuda_add_library(cloudphxx_lgrngn SHARED ${files})
+  target_link_libraries(cloudphxx_lgrngn ${CUDA_curand_LIBRARY})
 else()
-  add_library(cloudphxx_common_prtcls SHARED ${files})
+  set(files "${files};particles_cpp.cpp")
+  if (OPENMP_FOUND)
+    set(files "${files};particles_omp.cpp")
+  endif()
+  add_library(cloudphxx_lgrngn SHARED ${files})
 endif()
 
-install(TARGETS cloudphxx_common_prtcls LIBRARY DESTINATION lib)
+install(TARGETS cloudphxx_lgrngn LIBRARY DESTINATION lib)
