--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,4 +1,9 @@
-add_subdirectory(common)
-add_subdirectory(blk_1m)
-add_subdirectory(blk_2m)
-add_subdirectory(lgrngn)
+install(
+  DIRECTORY
+    common
+    blk_1m
+    blk_2m
+    lgrngn
+  DESTINATION 
+    include/libcloudph++
+)
