--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,18 +3,19 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
 find_package(CUDA QUIET)
 set(CUDA_PROPAGATE_HOST_FLAGS OFF) # -std=c++11 will not work
+# TODO: propagate optimisation flags to nvcc
 
 # allowing runtime choice between CUDA, CPP and OpenMP backends
 set(files "")
-set(files "${files};particles.cpp")
+set(files "${files};lib.cpp")
 
-set(files "${files};particles_cpp.cpp")
+set(files "${files};lib_cpp.cpp")
 if (OPENMP_FOUND)
-  set(files "${files};particles_omp.cpp")
+  set(files "${files};lib_omp.cpp")
 endif()
 
 if (CUDA_FOUND)
-  set(files "${files};particles_cuda.cu")
+  set(files "${files};lib_cuda.cu")
   add_definitions(-DCUDA_FOUND)
   cuda_add_library(cloudphxx_lgrngn SHARED ${files})
   target_link_libraries(cloudphxx_lgrngn ${CUDA_curand_LIBRARY})
