downgrading to non-C++11 formulae

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,9 +1,6 @@
 install(
   DIRECTORY
-    common
-    blk_1m
-    blk_2m
-    lgrngn
+    libcloudph++
   DESTINATION 
-    include/libcloudph++
+    include
 )
