fixing fake_units to compile with nvcc

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ endif()
 
 set(CMAKE_CXX_FLAGS "-I${CMAKE_SOURCE_DIR}/include ${CMAKE_CXX_FLAGS}")
 
+# TODO: detecd CUDA arch (native functionality would be best?)
 if (CUDA_FOUND)
   set(CUDA_NVCC_FLAGS "-I${CMAKE_SOURCE_DIR}/include ${CUDA_NVCC_FLAGS}")
   set(files "${files};lib_cuda.cu")
