--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.6) # for CMakePushCheckState
 project(libcloudph++ CXX C)
 
 # requireing C++11 
-set(CMAKE_CXX_FLAGS "-std=c++11")
+set(CMAKE_CXX_FLAGS "-std=c++11") # TODO: move to src?
 
 # TODO: libmpdataxx-config?
 # -DNDEBUG?
