--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,5 +2,6 @@ add_subdirectory(parcel)
 add_subdirectory(theta)
 add_subdirectory(particles)
 add_subdirectory(fake_units)
+add_subdirectory(zip)
 
 # TODO: target_compile_options() // added to CMake on Jun 3rd 2013
