working wet init with kelvin term on GPU!!!

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,7 +18,7 @@ set(CMAKE_CXX_FLAGS "-I${CMAKE_SOURCE_DIR}/include ${CMAKE_CXX_FLAGS}")
 
 # TODO: detecd CUDA arch (native functionality would be best?)
 if (CUDA_FOUND)
-  set(CUDA_NVCC_FLAGS "-I${CMAKE_SOURCE_DIR}/include ${CUDA_NVCC_FLAGS}")
+  set(CUDA_NVCC_FLAGS "-arch=sm_20 -I${CMAKE_SOURCE_DIR}/include ${CUDA_NVCC_FLAGS}")
   set(files "${files};lib_cuda.cu")
   add_definitions(-DCUDA_FOUND)
   cuda_add_library(cloudphxx_lgrngn SHARED ${files})
