--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,10 @@ endif()
 # TODO: detecd CUDA arch (native functionality would be best?)
 if (CUDA_FOUND)
   set(CUDA_NVCC_FLAGS "-arch=sm_20 -I${CMAKE_SOURCE_DIR}/include ${CUDA_NVCC_FLAGS}")
+  if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
+    set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -DNDEBUG")
+  endif()
+
   set(files "${files};lib_cuda.cu")
   add_definitions(-DCUDA_FOUND)
   cuda_add_library(cloudphxx_lgrngn SHARED ${files})
