a first draft of Python binding (tests/python); as of now only partly-working blk_1m::adj_cellwise()

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,5 +6,6 @@ add_subdirectory(particles)
 add_subdirectory(fake_units)
 add_subdirectory(bisect)
 add_subdirectory(zip)
+add_subdirectory(python)
 
 # TODO: target_compile_options() // added to CMake on Jun 3rd 2013
