--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,8 @@ project(libcloudph++ CXX C)
 set(CMAKE_CXX_FLAGS "-std=c++11 -Wfatal-errors -I${CMAKE_SOURCE_DIR}/include ${CMAKE_CXX_FLAGS}")
 
 set(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG")
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
   set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -march=native")
-elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -march=native -ffast-math") 
 endif()
 
 add_subdirectory(src) 
@@ -18,9 +16,4 @@ add_subdirectory(tests)
 
 add_subdirectory(include) 
 
-
-
-#TODO: search for Blitz
 #TODO: search for libmpdata++
-# TODO: automate "make doc"
-
