--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.6) # for CMakePushCheckState
+cmake_minimum_required(VERSION 2.8.11) # for target_include_directories
 project(libcloudph++ CXX C)
 
 # requireing C++11 and pointing to local headers
