adding a pytest hello-world test example

--- a/tests/python/CMakeLists.txt
+++ b/tests/python/CMakeLists.txt
@@ -13,6 +13,7 @@ target_link_libraries(cloudphxx ${Boost_LIBRARIES})
 # 
 find_package(PythonInterp)
 
+#
 foreach(test api_blk_1m api_blk_2m api_lgrngn)
   add_test(
     NAME ${test}
@@ -20,4 +21,14 @@ foreach(test api_blk_1m api_blk_2m api_lgrngn)
     COMMAND ${PYTHON_EXECUTABLE} "${CMAKE_SOURCE_DIR}/tests/python/${test}.py"
   )
 endforeach()
+
+# pytest tests run with "python -m pytest"
+foreach(test pytest_hello)
+  add_test(
+    NAME ${test}
+    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/tests/python" 
+    COMMAND ${PYTHON_EXECUTABLE} "-m" "pytest" "${CMAKE_SOURCE_DIR}/tests/python/${test}.py"
+  )
+endforeach()
+
 #TODO: indicate that tests depend on the lib
