--- a/tests/python/CMakeLists.txt
+++ b/tests/python/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(cloudphxx SHARED lib.cpp)
 set_target_properties(cloudphxx PROPERTIES SUFFIX ".so") # e.g. Mac defaults to .dylib which is not looked for by Python
 
+#TODO: search for NumPy, Blitz, ...
+
 # informing the Python bindings where to find Python
 find_package(PythonLibs)
 target_include_directories(cloudphxx PUBLIC ${PYTHON_INCLUDE_DIRS})
