--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(CMAKE_CXX_FLAGS "-I${CMAKE_SOURCE_DIR}/include ${CMAKE_CXX_FLAGS}")
 
-add_subdirectory(parcel)
+add_subdirectory(cuda)
 add_subdirectory(theta)
 add_subdirectory(particles)
 add_subdirectory(fake_units)
