adding a comment on how to quickly disable CUDA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,9 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang
   set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -march=native")
 endif()
 
+# note: commenting out the line below is a quick way of switching off CUDA
 find_package(CUDA QUIET)
+
 set(CUDA_PROPAGATE_HOST_FLAGS OFF) # -std=c++11 will not work
 # TODO: propagate optimisation flags to nvcc
 
