all instances of using-namespace-thrust-placeholders converted to namespace-arg=... to workaroung boost-thrust conflict (see https://github.com/headmyshoulder/odeint-v2/issues/134)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang
 endif()
 
 # note: commenting out the line below is a quick way of switching off CUDA
-#find_package(CUDA QUIET)
+find_package(CUDA QUIET)
 
 set(CUDA_PROPAGATE_HOST_FLAGS OFF) # -std=c++11 will not work
 # TODO: propagate optimisation flags to nvcc
