beefing up CMake tests with Debian-package-name suggestions; updating api_lgrngn

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,12 @@
 cmake_minimum_required(VERSION 2.8.11) # for target_include_directories
 project(libcloudph++ CXX C)
+if (NOT CMAKE_CXX_COMPILER)
+  message(FATAL_ERROR "
+    No C++ compiler found. 
+    Please install one (e.g. sudo apt-get install g++).
+    If needed, point CMake to it (e.g. cmake -DCMAKE_CXX_COMPILER=/usr/lib/gcc-snapshot/bin/g++).
+  ")
+endif()
 
 # requireing C++11 and pointing to local headers
 set(CMAKE_CXX_FLAGS "-std=c++11 -Wfatal-errors -I${CMAKE_SOURCE_DIR}/include ${CMAKE_CXX_FLAGS}")
@@ -8,6 +15,20 @@ set(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG")
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
   set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -march=native")
   set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
+endif()
+
+# requireing Thrust
+include(CheckCXXSourceCompiles)
+check_cxx_source_compiles("
+    #define THRUST_DEVICE_SYSTEM THRUST_DEVICE_SYSTEM_CPP
+    #include <thrust/version.h>
+    int main() {}
+  " THRUST_FOUND)
+if (NOT THRUST_FOUND)
+  message(FATAL_ERROR "
+    Thrust library not found. 
+    Please install it (e.g. sudo apt-get install libthrust-dev).
+  ")
 endif()
 
 # note: commenting out the line below is a quick way of switching off CUDA
