--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ compiler:
     - clang
 
 before_install:
-    - sudo add-apt-repository "deb http://us.archive.ubuntu.com/ubuntu/ trusty main universe multiverse"
+    - sudo add-apt-repository "deb http://us.archive.ubuntu.com/ubuntu/ trusty main universe multiverse restricted"
     - sudo apt-get update
 
 install:
     - if [[ $CXX == 'clang++' ]]; then sudo apt-get install --no-install-recommends clang; fi
     - if [[ $CXX == 'g++'     ]]; then sudo apt-get install --no-install-recommends g++  ; fi
-    - sudo apt-get install --no-install-recommends -t trusty libcuda1 nvidia-profiler nvidia-cuda-dev
+      #- sudo apt-get install --no-install-recommends -t trusty libcuda1 nvidia-profiler nvidia-cuda-dev
     - sudo apt-get install --no-install-recommends -t trusty -y libblitz0-dev cmake libboost-python-dev python-numpy libthrust-dev nvidia-cuda-toolkit
 
 script:
