--- a/tests/python/CMakeLists.txt
+++ b/tests/python/CMakeLists.txt
@@ -32,12 +32,12 @@ foreach(test api_blk_1m api_blk_2m api_lgrngn api_common)
   )
 endforeach()
 
-# pytest tests run with "python -m pytest"
-foreach(test pytest_hello)
-  #TODO: indicate that tests depend on the lib
-  add_test(
-    NAME ${test}
-    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bindings/python" 
-    COMMAND ${PYTHON_EXECUTABLE} "-m" "pytest" "-s" "${CMAKE_SOURCE_DIR}/tests/python/${test}.py"
-  )
-endforeach()
+## pytest tests run with "python -m pytest"
+#foreach(test pytest_hello)
+#  #TODO: indicate that tests depend on the lib
+#  add_test(
+#    NAME ${test}
+#    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bindings/python" 
+#    COMMAND ${PYTHON_EXECUTABLE} "-m" "pytest" "-s" "${CMAKE_SOURCE_DIR}/tests/python/${test}.py"
+#  )
+#endforeach()
