--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,5 +6,6 @@ add_subdirectory(fake_units)
 add_subdirectory(bisect)
 add_subdirectory(zip)
 add_subdirectory(python)
+add_subdirectory(common)
 
 # TODO: target_compile_options() // added to CMake on Jun 3rd 2013
