--- a/tests/python/CMakeLists.txt
+++ b/tests/python/CMakeLists.txt
@@ -23,7 +23,7 @@ if (NUMPY_FOUND GREATER 0)
 endif()
 
 # non-pytest tests
-foreach(test api_blk_1m api_blk_2m api_lgrngn api_common)
+foreach(test api_blk_1m api_blk_2m api_lgrngn api_common unit_lgrngn_adve)
   #TODO: indicate that tests depend on the lib
   add_test(
     NAME ${test}
