adding pytest version of test_lgrngn_adve

--- a/tests/python/CMakeLists.txt
+++ b/tests/python/CMakeLists.txt
@@ -23,7 +23,7 @@ if (NUMPY_FOUND GREATER 0)
 endif()
 
 # non-pytest tests
-foreach(test api_blk_1m api_blk_2m api_lgrngn api_common unit_lgrngn_adve)
+foreach(test api_blk_1m api_blk_2m api_lgrngn api_common)
   #TODO: indicate that tests depend on the lib
   add_test(
     NAME ${test}
@@ -33,11 +33,11 @@ foreach(test api_blk_1m api_blk_2m api_lgrngn api_common unit_lgrngn_adve)
 endforeach()
 
 ## pytest tests run with "python -m pytest"
-#foreach(test pytest_hello)
-#  #TODO: indicate that tests depend on the lib
-#  add_test(
-#    NAME ${test}
-#    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bindings/python" 
-#    COMMAND ${PYTHON_EXECUTABLE} "-m" "pytest" "-s" "${CMAKE_SOURCE_DIR}/tests/python/${test}.py"
-#  )
-#endforeach()
+foreach(test test_lgrngn_adve)
+  #TODO: indicate that tests depend on the lib
+  add_test(
+    NAME ${test}
+    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bindings/python" 
+    COMMAND ${PYTHON_EXECUTABLE} "-m" "pytest" "-s" "${CMAKE_SOURCE_DIR}/tests/python/${test}.py"
+  )
+endforeach()
