adding a blk_2m hello_world file

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,5 +7,6 @@ add_subdirectory(bisect)
 add_subdirectory(zip)
 add_subdirectory(python)
 add_subdirectory(common)
+add_subdirectory(blk2m_hello_world)
 
 # TODO: target_compile_options() // added to CMake on Jun 3rd 2013
