exposing git revision id from Python bindings

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(cloudphxx SHARED lib.cpp)
+add_dependencies(cloudphxx git_revision.h)
 set_target_properties(cloudphxx PROPERTIES SUFFIX ".so") # e.g. Mac defaults to .dylib which is not looked for by Python
 
 # informing the Python bindings where to find Python
