adding draft of tests/python/segfault_20150216.py

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(CMAKE_CXX_FLAGS "-I${CMAKE_SOURCE_DIR}/include ${CMAKE_CXX_FLAGS}")
 
+#TODO: add test_cuda
 add_subdirectory(theta)
 add_subdirectory(particles)
 add_subdirectory(fake_units)
