group tests into unit and physics (Release mode) tests

--- a/tests/python/CMakeLists.txt
+++ b/tests/python/CMakeLists.txt
@@ -22,22 +22,7 @@ if (NUMPY_FOUND GREATER 0)
   ")
 endif()
 
-# non-pytest tests
-foreach(test api_blk_1m api_blk_2m api_lgrngn api_common segfault_20150216 test_col_kernels coalescence_golovin)
-  #TODO: indicate that tests depend on the lib
-  add_test(
-    NAME ${test}
-    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bindings/python" 
-    COMMAND ${PYTHON_EXECUTABLE} "${CMAKE_SOURCE_DIR}/tests/python/${test}.py"
-  )
-endforeach()
-
-## pytest tests run with "python -m pytest"
-foreach(test test_lgrngn_adve)
-  #TODO: indicate that tests depend on the lib
-  add_test(
-    NAME ${test}
-    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bindings/python" 
-    COMMAND ${PYTHON_EXECUTABLE} "-m" "pytest" "-s" "${CMAKE_SOURCE_DIR}/tests/python/${test}.py"
-  )
-endforeach()
+add_subdirectory(unit)
+if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
+  add_subdirectory(physics)
+endif()
